Fix thumbnail not showing

--- a/client/css/app.css
+++ b/client/css/app.css
@@ -242,8 +242,8 @@ button:focus {
 }
 
 .savedImage {
-  width:70;
-  height:70;
+  width:70px;
+  height:70px;
   float:right;
   min-width: 40;
   min-height:40;
